jomini_derive/tests/compile-fail/unnamed_fields.rs
#[allow(dead_code)]
use jomini_derive::JominiDeserialize;

#[derive(JominiDeserialize)]
pub struct Model(u32, String);

fn main() {}
