jomini_derive/tests/compile-fail/unnamed_fields.stderr
error: Expected named fields
 --> tests/compile-fail/unnamed_fields.rs:5:12
  |
5 | pub struct Model(u32, String);
  |            ^^^^^
